--- a/ansible/roles/manager/tasks/main.yml
+++ b/ansible/roles/manager/tasks/main.yml
@@ -1,7 +1,5 @@
 - name: Install docker
   apt:
-    name:
-      - docker.io
+    name: docker.io
     state: latest
-    update_cache: yes
   when: ansible_distribution == "Ubuntu"
