--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -10,5 +10,5 @@
 - import_tasks: setup_ansible_user.yml
   tags: setup
 
-- import_tasks: configure_firewall.yml
+- import_tasks: setup_firewall.yml
   tags: [setup, firewall]
