seperated ansible setup from the rest. new inventory layout.

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-inventory = inventory_virtual
+inventory = inventory.yml
 private_key_file = ~/.ssh/servivi-ansible
 remote_user = ansible
