--- a/ansible/roles/manager/tasks/main.yml
+++ b/ansible/roles/manager/tasks/main.yml
@@ -1,5 +1,11 @@
-- name: Install docker
+- name: update and upgrade system
+  tags: maintenance
   apt:
-    name: docker.io
-    state: latest
+    update_cache: yes
+    upgrade: "safe"
+    autoremove: yes
+  changed_when: false
   when: ansible_distribution == "Ubuntu"
+
+- import_tasks: setup_docker_swarm.yml
+  tags: [swarm, setup]
