--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -2,14 +2,19 @@ all:
   hosts:
     node1:
       ansible_host: 2a02:168:537f:2:5054:ff:feca:e91f
+      ansible_python_interpreter: /usr/bin/python3
     node2:
       ansible_host: 2a02:168:537f:2:5054:ff:fe6f:4419
+      ansible_python_interpreter: /usr/bin/python3
     node3:
       ansible_host: 2a02:168:537f:2:5054:ff:fe81:79e8
+      ansible_python_interpreter: /usr/bin/python3
     raspberry:
       ansible_host: 2a04:ee41:2:e1c2:4393:a846:b00e:ee6f
+      ansible_python_interpreter: /usr/bin/python3
     ganymede:
       ansible_host: 2a02:168:537f:2:21e:6ff:fe45:2436
+      ansible_python_interpreter: /usr/bin/python3
 
   children:
     swarm:
