--- a/ansible/roles/base/tasks/setup_wireguard.yml
+++ b/ansible/roles/base/tasks/setup_wireguard.yml
@@ -2,6 +2,4 @@
   apt:
     name: wireguard
     state: present
-  when: ansible_distribution == "Ubuntu"
-
-  
+  when: ansible_os_family == 'Debian'
